# AI_Accompaniment

./: .gitignore  .gitmodules  ACTION_PLAN.md  PROTOCOL.md  README.md
clients/juce_plugin/: .gitignore  CMakeLists.txt  README.md
clients/juce_plugin/Source/: ContextRingBuffer.h  OscBridge.cpp  OscBridge.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProtocolConstants.h  StemOutputBuffer.h
clients/python_ref/: README.md  test_client.py
clients/web_ui/: README.md  bridge.py  index.html
scripts/: render_docs_pdf.py
tests/playwright/: test_smoke.py
